[gd_scene load_steps=10 format=4 uid="uid://d2cq044y6afmd"]

[ext_resource type="Texture2D" uid="uid://c27ecqdydyyp7" path="res://icon.svg" id="1_3hls8"]
[ext_resource type="Script" uid="uid://cdq81x1ro7dnl" path="res://game_manager.gd" id="1_5hph3"]
[ext_resource type="PackedScene" uid="uid://cik3re1w8a6th" path="res://player.tscn" id="1_hbghi"]
[ext_resource type="PackedScene" uid="uid://n16l56yytbh7" path="res://boss.tscn" id="2_hn12h"]
[ext_resource type="Texture2D" uid="uid://ds5uab002u0nr" path="res://grey_bar_round_gloss_large.png" id="5_j7kpp"]
[ext_resource type="Texture2D" uid="uid://0i55fws3b7u" path="res://blue_bar_round_gloss_large.png" id="6_bjebc"]
[ext_resource type="Texture2D" uid="uid://b7gfxl1mlw62j" path="res://green_bar_round_gloss_large.png" id="7_j7kpp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hn12h"]
texture = ExtResource("1_3hls8")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ihfcg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_hn12h")

[node name="GameManager" type="Node2D"]
script = ExtResource("1_5hph3")

[node name="Player" parent="." instance=ExtResource("1_hbghi")]
position = Vector2(570, 399)

[node name="Boss" parent="." instance=ExtResource("2_hn12h")]
position = Vector2(579, 159)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAMAAAAAAAEAAAAEAAMAAAAAAAIAAAAEAAMAAAAAAAMAAAAEAAMAAAAAAAQAAAAEAAMAAAAAAAUAAAAEAAMAAAAAAAYAAAAEAAMAAAAAAAcAAAAEAAMAAAAAAAgAAAAEAAMAAAAAAAkAAAAEAAMAAAAAAAoAAAAEAAMAAAAAAAsAAAAEAAMAAAAAAAwAAAAEAAMAAAAAAA0AAAAEAAMAAAAAAA4AAAAEAAMAAAAAAA8AAAAEAAMAAAAAABAAAAAEAAMAAAAAABEAAAAEAAMAAAAAABIAAAAEAAMAAAAAABMAAAAEAAMAAAAAABQAAAAEAAMAAAAAABUAAAAEAAMAAAAAABYAAAAEAAMAAAAAABcAAAAEAAMAAAAAABgAAAAEAAMAAAAAABkAAAAEAAMAAAAAABoAAAAEAAMAAAAAABsAAAAEAAMAAAAAABwAAAAEAAMAAAAAAB0AAAAEAAMAAAAAAB4AAAAEAAMAAAAAAB8AAAAEAAMAAAAAACAAAAAEAAMAAAAAACEAAAAEAAMAAAAAACIAAAAEAAMAAAAAACMAAAAEAAMAAAAAACQAAAAEAAMAAAAAACUAAAAEAAMAAAAAACYAAAAEAAMAAAAAACcAAAAEAAMAAAABACcAAAAEAAMAAAACACcAAAAEAAMAAAADACcAAAAEAAMAAAAEACcAAAAEAAMAAAAFACcAAAAEAAMAAAAGACcAAAAEAAMAAAAHACcAAAAEAAMAAAAIACcAAAAEAAMAAAAJACcAAAAEAAMAAAAKACcAAAAEAAMAAAALACcAAAAEAAMAAAAMACcAAAAEAAMAAAANACcAAAAEAAMAAAAOACcAAAAEAAMAAAAPACcAAAAEAAMAAAAQACcAAAAEAAMAAAARACcAAAAEAAMAAAASACcAAAAEAAMAAAATACcAAAAEAAMAAAAXACcAAAAEAAMAAAAWACcAAAAEAAMAAAAVACcAAAAEAAMAAAAUACcAAAAEAAMAAAAYACcAAAAEAAMAAAAZACcAAAAEAAMAAAAaACcAAAAEAAMAAAAbACcAAAAEAAMAAAAcACcAAAAEAAMAAAAdACcAAAAEAAMAAAAeACcAAAAEAAMAAAAfACcAAAAEAAMAAAAgACcAAAAEAAMAAAAhACcAAAAEAAMAAAAiACcAAAAEAAMAAAAjACcAAAAEAAMAAAAkACcAAAAEAAMAAAAlACcAAAAEAAMAAAAmACcAAAAEAAMAAAAnACcAAAAEAAMAAAAoACcAAAAEAAMAAAApACcAAAAEAAMAAAAqACcAAAAEAAMAAAArACcAAAAEAAMAAAAsACcAAAAEAAMAAAAtACcAAAAEAAMAAAAuACcAAAAEAAMAAAAvACcAAAAEAAMAAAAwACcAAAAEAAMAAAAxACcAAAAEAAMAAAAyACcAAAAEAAMAAAAzACcAAAAEAAMAAAA0ACcAAAAEAAMAAAA1ACcAAAAEAAMAAAA2ACcAAAAEAAMAAAA3ACcAAAAEAAMAAAA4ACcAAAAEAAMAAAA5ACcAAAAEAAMAAAA6ACcAAAAEAAMAAAA7ACcAAAAEAAMAAAA8ACcAAAAEAAMAAAA9ACcAAAAEAAMAAAA+ACcAAAAEAAMAAAA/ACcAAAAEAAMAAABAACcAAAAEAAMAAABBACcAAAAEAAMAAABCACcAAAAEAAMAAABDACcAAAAEAAMAAABEACcAAAAEAAMAAABFACcAAAAEAAMAAABGACcAAAAEAAMAAABHACcAAAAEAAMAAABHACYAAAAEAAMAAABHACUAAAAEAAMAAABHACQAAAAEAAMAAABHACMAAAAEAAMAAABHACIAAAAEAAMAAABHACEAAAAEAAMAAABHACAAAAAEAAMAAABHAB8AAAAEAAMAAABHAB4AAAAEAAMAAABHAB0AAAAEAAMAAABHABwAAAAEAAMAAABHABsAAAAEAAMAAABHABoAAAAEAAMAAABHABkAAAAEAAMAAABHABgAAAAEAAMAAABHABcAAAAEAAMAAABHABYAAAAEAAMAAABHABUAAAAEAAMAAABHABQAAAAEAAMAAABHABMAAAAEAAMAAABHABIAAAAEAAMAAABHABEAAAAEAAMAAABHABAAAAAEAAMAAABHAA8AAAAEAAMAAABHAA4AAAAEAAMAAABHAA0AAAAEAAMAAABHAAwAAAAEAAMAAABHAAsAAAAEAAMAAABHAAoAAAAEAAMAAABHAAkAAAAEAAMAAABHAAgAAAAEAAMAAABHAAcAAAAEAAMAAABHAAYAAAAEAAMAAABHAAUAAAAEAAMAAABHAAQAAAAEAAMAAABHAAMAAAAEAAMAAABHAAIAAAAEAAMAAABHAAEAAAAEAAMAAABHAAAAAAAEAAMAAAABAAAAAAAEAAMAAAACAAAAAAAEAAMAAAADAAAAAAAEAAMAAAAEAAAAAAAEAAMAAAAFAAAAAAAEAAMAAAAGAAAAAAAEAAMAAAAHAAAAAAAEAAMAAAAIAAAAAAAEAAMAAAAJAAAAAAAEAAMAAAAKAAAAAAAEAAMAAAALAAAAAAAEAAMAAAAMAAAAAAAEAAMAAAANAAAAAAAEAAMAAAAOAAAAAAAEAAMAAAAPAAAAAAAEAAMAAAAQAAAAAAAEAAMAAAARAAAAAAAEAAMAAAASAAAAAAAEAAMAAAATAAAAAAAEAAMAAAAUAAAAAAAEAAMAAAAVAAAAAAAEAAMAAAAWAAAAAAAEAAMAAAAXAAAAAAAEAAMAAAAYAAAAAAAEAAMAAAAZAAAAAAAEAAMAAAAaAAAAAAAEAAMAAAAbAAAAAAAEAAMAAAAcAAAAAAAEAAMAAAAdAAAAAAAEAAMAAAAeAAAAAAAEAAMAAAAfAAAAAAAEAAMAAAAgAAAAAAAEAAMAAAAhAAAAAAAEAAMAAAAiAAAAAAAEAAMAAAAjAAAAAAAEAAMAAAAkAAAAAAAEAAMAAAAlAAAAAAAEAAMAAAAmAAAAAAAEAAMAAAAnAAAAAAAEAAMAAAAoAAAAAAAEAAMAAAApAAAAAAAEAAMAAAAqAAAAAAAEAAMAAAArAAAAAAAEAAMAAAAsAAAAAAAEAAMAAAAtAAAAAAAEAAMAAAAuAAAAAAAEAAMAAAAvAAAAAAAEAAMAAAAwAAAAAAAEAAMAAAAxAAAAAAAEAAMAAAAyAAAAAAAEAAMAAAAzAAAAAAAEAAMAAAA0AAAAAAAEAAMAAAA1AAAAAAAEAAMAAAA2AAAAAAAEAAMAAAA3AAAAAAAEAAMAAAA4AAAAAAAEAAMAAAA5AAAAAAAEAAMAAAA6AAAAAAAEAAMAAAA7AAAAAAAEAAMAAAA8AAAAAAAEAAMAAAA9AAAAAAAEAAMAAAA+AAAAAAAEAAMAAAA/AAAAAAAEAAMAAABAAAAAAAAEAAMAAABGAAAAAAAEAAMAAABFAAAAAAAEAAMAAABEAAAAAAAEAAMAAABDAAAAAAAEAAMAAABCAAAAAAAEAAMAAABBAAAAAAAEAAMAAAABACEAAAACAAIAAAACACEAAAACAAIAAAADACEAAAACAAIAAAAEACEAAAACAAIAAAAFACEAAAACAAIAAAAGACEAAAACAAIAAAAHACEAAAACAAIAAAAIACEAAAACAAIAAAAJACEAAAACAAIAAAAKACEAAAACAAIAAAALACEAAAACAAIAAAAMACEAAAACAAIAAAANACEAAAACAAIAAAAOACEAAAACAAIAAAAPACEAAAACAAIAAAAQACEAAAACAAIAAAARACEAAAACAAIAAAASACEAAAACAAIAAAATACEAAAACAAIAAAAUACEAAAACAAIAAABGACEAAAACAAIAAABFACEAAAACAAIAAABEACEAAAACAAIAAABDACEAAAACAAIAAABCACEAAAACAAIAAABBACEAAAACAAIAAABAACEAAAACAAIAAAA/ACEAAAACAAIAAAA+ACEAAAACAAIAAAA9ACEAAAACAAIAAAA8ACEAAAACAAIAAAA7ACEAAAACAAIAAAA6ACEAAAACAAIAAAA5ACEAAAACAAIAAAA4ACEAAAACAAIAAAA3ACEAAAACAAIAAAA2ACEAAAACAAIAAAA1ACEAAAACAAIAAAA0ACEAAAACAAIAAAAzACEAAAACAAIAAAAyACEAAAACAAIAAAAxACEAAAACAAIAAAAwACEAAAACAAIAAAAvACEAAAACAAIAAAAuACEAAAACAAIAAAAtACEAAAACAAIAAAAsACEAAAACAAIAAAArACEAAAACAAIAAAAqACEAAAACAAIAAAApACEAAAACAAIAAAAoACEAAAACAAIAAAAnACEAAAACAAIAAAAmACEAAAACAAIAAAAlACEAAAACAAIAAAAkACEAAAACAAIAAAAjACEAAAACAAIAAAAiACEAAAACAAIAAAAhACEAAAACAAIAAAAgACEAAAACAAIAAAAfACEAAAACAAIAAAAeACEAAAACAAIAAAAdACEAAAACAAIAAAAcACEAAAACAAIAAAAbACEAAAACAAIAAAAaACEAAAACAAIAAAAZACEAAAACAAIAAAAYACEAAAACAAIAAAAXACEAAAACAAIAAAAWACEAAAACAAIAAAAVACEAAAACAAIAAAA=")
tile_set = SubResource("TileSet_ihfcg")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = 311.0
offset_top = 537.0
offset_right = 407.0
offset_bottom = 577.0
scale = Vector2(5.335, 4)
max_value = 3.0
step = 0.001
value = 3.0
texture_under = ExtResource("5_j7kpp")
texture_progress = ExtResource("6_bjebc")

[node name="TargetTextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = 311.0
offset_top = 537.0
offset_right = 407.0
offset_bottom = 577.0
scale = Vector2(5.335, 4)
max_value = 3.0
step = 0.001
value = 1.0
fill_mode = 6
texture_progress = ExtResource("7_j7kpp")

[node name="PhaseTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="PhaseTimer" to="." method="_on_phase_timer_timeout"]
